--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="../core.js"></script>
 <script type="text/javascript">
 	var game = new Engine();
+	game.run();
 </script>
 </body>
 </html>
