--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>test</title>
+	<style type="text/css">
+		html,body{background-color: #000;}
+	</style>
 </head>
 <body>
 <script type="text/javascript" src="../core.js"></script>
