--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 <body>
 <script type="text/javascript" src="../core.js"></script>
 <script type="text/javascript">
-	var game = new Engine();
+	var game = new Engine({scale:1});
 	game.run();
 </script>
 </body>
