--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>test</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width;init-scale=1;">
 	<style type="text/css">
 		html,body{background-color: #000;}
 	</style>
